made corrections to project proper width attributes removed unnecessary atrributes corrected opacity issues and correct color in alignment with figma brief

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -9,6 +9,7 @@
 
 .card__title {
   margin: 0;
+  max-width: 350px;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -18,7 +19,6 @@
 }
 
 .card__content {
-  width: 413px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -29,11 +29,11 @@
   width: 23px;
   height: 20px;
   border: none;
-  transition: opacity 0.5s;
+  transition: opacity 0.4s;
 }
 
 .card__like-button:hover {
-  color: #212121;
+  opacity: 1;
   cursor: pointer;
 }
 
@@ -41,21 +41,15 @@
   .card__image {
     width: 288px;
     height: 288px;
-    padding-bottom: 12px;
-  }
-
-  .card__content {
-    width: 288px;
-    height: 18px;
   }
 
   .card {
-    width: 288px;
+    max-width: 288px;
   }
 
   .card__title {
+    max-width: 250px;
     font-size: 16px;
-    font-style: medium;
     line-height: 1;
   }
 
