--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,5 +1,5 @@
 .content {
-  padding: 0 20px;
+  padding: 0 16px;
 }
 
 @media screen and (max-width: 627px) {
