--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: #fcf5e5;
-  margin: 60px auto;
+  margin: 60px 0;
 }
 
 .footer__copyright {
